# apollo-p4-ethernet

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  cc1101.c  cc1101.h  ethernet_example_main copy.c  ethernet_example_main.c  main.c  mqtt.c  mqtt.h  mqtt_log.c  mqtt_log.h  ota_http.c  ota_http.h
tools/: gen_build_info.sh  increment_build.sh
